--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Archivo');
 @import url('https://fonts.googleapis.com/css?family=Arvo');
+@import url('https://fonts.googleapis.com/css?family=Seaweed+Script');
+@import url('https://fonts.googleapis.com/css?family=Spartan');
 
 body {
   margin: 0;
