--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Arvo');
 @import url('https://fonts.googleapis.com/css?family=Seaweed+Script');
 @import url('https://fonts.googleapis.com/css?family=Spartan');
+@import url('https://fonts.googleapis.com/css?family=Cantarell');
 
 body {
   margin: 0;
